--- a/notes/templates/v.html
+++ b/notes/templates/v.html
@@ -3,7 +3,6 @@
 {% block tittle %}查看笔记{% endblock %}
 {% block tittle2 %}查看笔记{% endblock %}
 
-
 {% block css %}
     {{ ckeditor.load_code_theme() }}
 {% endblock %}
@@ -14,6 +13,7 @@
         {{ note.body|safe }}
     </div>
     <a href="{{ url_for('main.edit_note', p_id=note.id) }}" class="mdui-btn mdui-btn-raised mdui-float-right">编辑</a>
+    <a href="javascript:mdui.alert('{{ url_for('main.share', uuid=note.uuid, _external=True) }}', '分享');" class="mdui-btn mdui-btn-raised mdui-float-right">分享</a>
     <form method="post" action={{ url_for('main.del_note') }}>
         {{ del_note.csrf_token }}
         {{ del_note.N_id(value=note.id) }}
