--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -16,8 +16,22 @@
     <div class="mdui-toolbar mdui-color-theme">
         <i class="mdui-icon material-icons mdui-ripple" mdui-drawer="{target: '.mdui-drawer'}">menu</i>
         <span class="mdui-typo-title">{% block tittle2 %}我的笔记本{% endblock %}</span>
+        <div class="mdui-toolbar-spacer"></div>
+        {% if current_user.is_authenticated %}
+            <div class="mdui-textfield mdui-textfield-expandable">
+                <button class="mdui-textfield-icon mdui-btn mdui-btn-icon"><i
+                        class="mdui-icon material-icons">search</i>
+                </button>
+                <form method="get" action="{{ url_for('main.search') }}">
+                    <input class="mdui-textfield-input" name="q" type="text" placeholder="搜索什么..."/>
+                </form>
+                <button class="mdui-textfield-close mdui-btn mdui-btn-icon"><i
+                        class="mdui-icon material-icons">close</i>
+                </button>
+            </div>
+        {% endif %}
     </div>
-    <div class="mdui-drawer mdui-drawer-full-height mdui-drawer-close">
+    <div class="mdui-drawer mdui-drawer-full-height mdui-drawer-close mdui-color-white">
         <div class="mdui-list">
             <a href="/" class="mdui-list-item mdui-ripple">首页</a>
             {% if current_user.is_authenticated %}
