--- a/notes/templates/search.html
+++ b/notes/templates/search.html
@@ -7,7 +7,7 @@
 {% block main %}
     <a href="{{ url_for('main.new') }}" class="mdui-fab mdui-fab-fixed mdui-ripple mdui-color-theme"><i
             class="mdui-icon material-icons">add</i></a>
-    <h2>{{ current_user.name }}的笔记本({{ page.total }})：</h2>
+    <h2>搜索"{{ q }}"({{ page.total }})：</h2>
     {% if page.items %}
         {% for note in page.items %}
             <h2>{{ note.tittle }}</h2>
@@ -44,7 +44,7 @@
             {% endif %}
         </div>
     {% else %}
-        <p>你还没有笔记，快按“<i class="mdui-icon material-icons">add</i>”键创建一个吧！</p>
+        <p>没有符合要求的笔记</p>
     {% endif %}
 {% endblock %}
 
