移动适配、修复Bug

--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>{% block tittle %}我的笔记本{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.png') }}">
     {% assets "css_all" %}
