--- a/notes/static/css/style.css
+++ b/notes/static/css/style.css
@@ -65,3 +65,8 @@ footer {
     text-align: center;
     transition: .3s;
 }
+
+.tittle_and_time{
+    display: flex;
+    justify-content: space-between;
+}
