--- a/notes/templates/search.html
+++ b/notes/templates/search.html
@@ -65,8 +65,7 @@
 {% endblock %}
 
 {% block script %}
-    <script src="https://cdn.bootcdn.net/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
+    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/??moment.js/2.29.1/moment.min.js,moment.js/2.29.1/locale/zh-cn.js"></script>
     <script src="{{ url_for('static', filename='js/flask-moment.js') }}"></script>
     <script>
         if ($(window).width() <= 600) {
