--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -44,6 +44,7 @@
     </div>
 </div>
 <main>
+    <a href="http://49.234.23.169:8666/" class="mdui-btn mdui-btn-raised mdui-float-right ba">聊天</a>
     {% for categories, message in get_flashed_messages(with_categories=True) %}
         <div class="{{ categories }}">{{ message }}</div>
     {% endfor %}
@@ -53,7 +54,7 @@
     {% endblock %}
 </main>
 <footer>
-    <p class="mdui-typo">作者：嘉嘉&nbsp;&nbsp;&nbsp;<a href="https://yanjiajia.cn">网站：yanjiajia.cn</a></p>
+    <p class="mdui-typo">作者：嘉嘉&nbsp;&nbsp;&nbsp;<a href="https://hijiajia.xyz">网站：yanjiajia.cn</a></p>
 </footer>
 
 <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js" type="application/javascript"></script>
