--- a/notes/templates/base.html
+++ b/notes/templates/base.html
@@ -44,7 +44,7 @@
     </div>
 </div>
 <main>
-    <a href="http://49.234.23.169:8666/" class="mdui-btn mdui-btn-raised mdui-float-right ba">聊天</a>
+    <a href="http://49.234.23.169:8666/" class="mdui-btn mdui-btn-raised mdui-float-right ba"><strong>和机器人聊天</strong></a>
     {% for categories, message in get_flashed_messages(with_categories=True) %}
         <div class="{{ categories }}">{{ message }}</div>
     {% endfor %}
